# channel-health-monitoring

./: .env.example  .gitignore  AGENTS.md  BUILD_TROUBLESHOOTING.md  CHANNEL_HEALTH_SETUP.md  MIGRATION_STATUS.md  README.md  SETUP_ALIYUN.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  test-rust-exporter.sh
.github/workflows/: ci.yml
alertmanager/: alertmanager.yml
docs/: rust_exporter_example.rs
docs/rust-exporter/: DEPLOYMENT.md  E2E_VALIDATION.md  LOCAL_TESTING.md  PROGRESS.md  PROJECT_SUMMARY.md  PUSHGATEWAY.md  PUSHGATEWAY_ALIYUN.md  QUICKSTART_ALIYUN.md  README.md  RUST_MODULAR_ARCHITECTURE.md  RUST_REWRITE_PLAN_V2.md  RUST_RGR_TODO.md  RUST_RGR_WORKFLOW.md  TEST_COVERAGE.md
e2e/: grafana-dashboard.spec.ts
exporters/channel-health-exporter/: Dockerfile  exporter.py  metrics.py  metrics.yaml  requirements.txt
prometheus/: prometheus.yml
rust-exporter/: .env.example  .gitignore  Cargo.toml  Dockerfile
rust-exporter/src/: db.rs  lib.rs  main.rs  pushgateway.rs
rust-exporter/src/api/: mod.rs
rust-exporter/src/core/: collector.rs
rust-exporter/src/metrics/: mod.rs
rust-exporter/src/metrics/availability/: collector.rs  metrics.rs
rust-exporter/src/metrics/cache/: collector.rs
rust-exporter/src/metrics/cost/: collector.rs  metrics.rs  mod.rs
rust-exporter/tests/: api_tests.rs  availability_collector_tests.rs  availability_metrics_tests.rs  cache_collector_tests.rs  cache_metrics_tests.rs  core_collector_tests.rs  cost_collector_tests.rs  cost_metrics_tests.rs  db_tests.rs  integration_tests.rs
(+8 files in other folders)
