[package]
name = "rust-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
rust_decimal = "1.37.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "rust_decimal"] }
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
axum-test = "19.1.1"
tokio = { version = "1.50.0", features = ["full", "test-util"] }
